# djangoProjectHH

./: pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: urls.py  views.py
companies/migrations/: 0001_initial.py
djangoProject1/: settings.py  urls.py
vacancies/: models.py  premissions.py  serializes.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_min_experience.py  0007_vacancy_update_at.py
